# jacket-finder

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 001_create_jackets_table.sql
scripts/: check.sh
src/: jacket_finder.rs  main.rs  traits.rs
src/database/: mod.rs
src/discord/: mod.rs
src/models/: mod.rs
src/scraper/: mod.rs
src/scrapers/: marrkt.rs  mod.rs
