[package]
name = "jacket-finder"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.9"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
md5 = "0.7"
dotenvy = "0.15"
